# zephyr_ada_rts

./: .gitignore  README.md  ada_source_path  alire.toml  compiler_flags.gpr  gnat_pragmas.adc  ide_env.sh  zephyr_ada_rts.gpr
config/: zephyr_ada_rts_config.ads  zephyr_ada_rts_config.gpr  zephyr_ada_rts_config.h
sample_apps/zephyr_ada_hello/: CMakeLists.txt  prj.conf
sample_apps/zephyr_ada_hello/ada_app/: CMakeLists.txt  alire.toml  zephyr_ada_hello.gpr
sample_apps/zephyr_ada_hello/ada_app/config/: zephyr_ada_hello_config.ads  zephyr_ada_hello_config.gpr  zephyr_ada_hello_config.h
sample_apps/zephyr_ada_hello/ada_app/src/: zephyr_ada_hello.adb  zephyr_ada_hello.ads
sample_apps/zephyr_ada_hello/src/: ada_app.h  main.c
src/: zephyr_ada_rts.ads
